--- a/DatubazeUnServeris/usbwebserver/mysql/my.ini
+++ b/DatubazeUnServeris/usbwebserver/mysql/my.ini
@@ -38,9 +38,9 @@ socket		= /tmp/mysql.sock
 port		= 3306
 
 
-innodb_data_home_dir = C:/Users/Aija-Monika.Vainina/Downloads/usbwebserver_v8.6.2/usbwebserver\mysql\data\
+innodb_data_home_dir = C:/Users/Aija-Monika.Vainina/Downloads/DatubazeUnServeris/usbwebserver\mysql\data\
 innodb_data_file_path = ibdata1:10M:autoextend
-innodb_log_group_home_dir = C:/Users/Aija-Monika.Vainina/Downloads/usbwebserver_v8.6.2/usbwebserver\mysql\data\
+innodb_log_group_home_dir = C:/Users/Aija-Monika.Vainina/Downloads/DatubazeUnServeris/usbwebserver\mysql\data\
 
 # You can set .._buffer_pool_size up to 50 - 80 %
 # of RAM but beware of setting memory usage too high
