--- a/DatubazeUnServeris/usbwebserver/php/php.ini
+++ b/DatubazeUnServeris/usbwebserver/php/php.ini
@@ -747,7 +747,7 @@ user_dir =
 ; extension_dir = "./"
 ; On windows:
 ; extension_dir = "ext"
-extension_dir = "C:/Users/Aija-Monika.Vainina/Downloads/usbwebserver_v8.6.2/usbwebserver\php\ext\"
+extension_dir = "C:/Users/Aija-Monika.Vainina/Downloads/DatubazeUnServeris/usbwebserver\php\ext\"
 
 ; Directory where the temporary files should be placed.
 ; Defaults to the system default (see sys_get_temp_dir)
